# fastapi_server

./: .gitignore  pyproject.toml  reqs.adoc  server.py
api/routes/: users.py
entities/: authuser.py  trySignUpUser.py  user.py
repo/: user_repo.py
server/: server.py
servicios/: envkeysgen.py  login.py  signup.py
servicios/account/: auth.py  login.py
servicios/entitycreators/: registered_user_builder.py
servicios/protocols/: builders.py  entityrepo.py
servicios/repo/: user_repo.py
servicios/tokens/: generate_tokens.py  read_token.py  token_validator.py
tests/: test_server.py  test_signup.py  test_user_entity.py  test_user_repo.py
tests/api/routes/: test_user.py
tests/entities/: test_user_entity.py
tests/helpers/: auth_user_factory.py  registered_user_factory.py  sign_up_user_factory.py  stub_repo_factory.py  stub_user_repo.py  test_user_factory.py  user_factory.py
tests/helpers/repo_builders/: repo_builder.py
tests/helpers/user_builders/: auth_user_builder.py  registered_user_builder.py  try_sign_up_user_builder.py
tests/helpers/user_factories/: registered_user_factory.py  sign_up_user_factory.py
tests/servicios/: test_auth.py  test_login.py  test_secret_key_generator.py  test_signup.py  test_token_generator.py  test_token_reader.py
tests/tests_doubles/: test_auth_user_factory.py  test_registered_user_factory.py  test_signup_user_factory.py
tests/tests_doubles/repo_builders/: test_repo_builder.py
tests/tests_doubles/user_builders/: test_auth_user_builder.py  test_registered_user_builder.py  test_try_sign_up_user_builder.py
(+3 files in other folders)
